replaced article, categories-aside and breadcrumbs stylesheets with Moshev version. Autocomplete header position fixed. Search in find box on focus gray font color. Search header on mobile width 100%.

--- a/assets/scss/components/_breadcrumbs.scss
+++ b/assets/scss/components/_breadcrumbs.scss
@@ -15,7 +15,7 @@
 
   span {
     margin: 0 5px;
-    font-size: 13.5pt;
+    font-size: 11pt;
     font-weight: 300;
   }
 }
