--- a/assets/scss/components/categories-aside.component.scss
+++ b/assets/scss/components/categories-aside.component.scss
@@ -3,7 +3,7 @@
   width: 100%;
   max-width: 315px;
   height: 100%;
-  margin: 2rem;
+  margin: 1rem 2rem;
   padding: 20px;
   box-shadow: 0 2px 15px 0 rgba(0,0,0,0.1);
   background-color: #fff;
